--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,4 +1,29 @@
-$first_color: #337D5A;
-$second_color: #93B474;
-$third_color: #1A2F3F;
-$fourth_color: #8A8A8A;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+img {
+    width: 100%;
+    height: 100%;
+}
+a {
+    text-decoration: none;
+}
+ul {
+    padding: 0;
+    list-style: none;
+}
+
+$first_color: #337d5a;
+$second_color: #93b474;
+$third_color: #1a2f3f;
+$fourth_color: #8a8a8a;
+
+$first_bg_color: #fafafa;
+$third_bg_color: #fbfbfb;
+
+$first_text_color: #323232;
+
+$default_color: #ffffff;
+$alternate_text_color: #000000;
