--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -364,6 +364,7 @@
     justify-content: space-between;
     width: 19px;
     height: 17px;
+    cursor: pointer;
     span {
         width: 100%;
         height: 3px;
@@ -415,6 +416,7 @@
     &__exit {
         width: 16px;
         height: 16px;
+        cursor: pointer;
     }
 
     &__main {
