--- a/src/sass/base/_footer.scss
+++ b/src/sass/base/_footer.scss
@@ -1,9 +1,12 @@
 .footer {
     padding-top: 101px;
     &__info {
-        padding: 0 314px;
+        margin: 0 auto;
+        width: 1290px;
         display: flex;
         justify-content: space-between;
+        &-container {
+        }
     }
 
     &__contacts {
@@ -141,15 +144,23 @@
     }
 
     &__map {
+        width: 740px;
+        height: 518px;
     }
 
     &__navigation {
+        margin: 0 auto;
         margin-top: 80px;
-        padding: 0 314px;
+        width: 1290px;
         padding-bottom: 27px;
-        border-bottom: 1px solid #ebebeb;
         display: flex;
         justify-content: space-between;
+    }
+
+    &__divider {
+        width: 100%;
+        height: 1px;
+        background-color: #ebebeb;
     }
 
     &__logo {
@@ -193,7 +204,8 @@
     }
 
     &__licence {
-        padding: 0 314px;
+        margin: 0 auto;
+        width: 1290px;
         height: 83px;
         display: flex;
         align-items: center;
@@ -225,6 +237,14 @@
         font-size: 12px;
         line-height: 15px;
         color: $third_color;
+        &_middle {
+            display: none;
+            font-family: 'Montserrat';
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 15px;
+            color: $third_color;
+        }
     }
 
     &__sec-social {
@@ -241,6 +261,172 @@
                 width: 16px;
                 height: 16px;
             }
+        }
+    }
+}
+
+@media (max-width: 1355px) {
+    .footer {
+        &__info {
+            width: auto;
+            margin: 0 25px;
+        }
+        &__navigation {
+            width: auto;
+            margin-left: 25px;
+            margin-right: 25px;
+        }
+        &__list {
+            width: auto;
+            &-item {
+                margin-right: 25px;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+        &__licence {
+            width: auto;
+            margin: 0 25px;
+            &-container {
+                width: calc(767px * 100% / 1290px);
+            }
+        }
+    }
+}
+@media (max-width: 1125px) {
+    .footer {
+        &__info {
+            width: auto;
+            margin: 0 25px;
+            align-items: center;
+            flex-direction: column;
+            &-container {
+                margin-top: 50px;
+                width: 695px;
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: space-between;
+                align-content: space-between;
+                gap: 50px 0;
+            }
+        }
+
+        &__contacts {
+            &-info {
+                margin-top: 0;
+            }
+        }
+        &__email {
+            margin-top: 0;
+        }
+        &__office {
+            margin-top: 0;
+        }
+        &__manufacture {
+            margin-top: 0;
+        }
+        &__map {
+            margin-top: 50px;
+        }
+        &__navigation {
+            display: none;
+        }
+        &__list {
+            width: auto;
+            &-item {
+                margin-right: 25px;
+                &:last-child {
+                    margin-right: 0;
+                }
+            }
+        }
+        &__licence {
+            width: auto;
+            margin: 0 25px;
+            &-container {
+                width: calc(767px * 100% / 1290px);
+            }
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .footer {
+        &__divider {
+            margin-top: 25px;
+        }
+        &__licence {
+            &-container {
+                width: auto;
+            }
+        }
+        &__copyright {
+            &_middle {
+                display: block;
+            }
+            &:first-child {
+                display: none;
+            }
+        }
+    }
+}
+@media (max-width: 768px) {
+    .footer {
+        &__map {
+            width: 100%;
+        }
+    }
+    
+}
+@media (max-width: 745px) {
+    .footer {
+        &__info{
+            &-container {
+                width: 100%;
+            }
+        }
+    }
+}
+@media (max-width: 630px) {
+    .footer {
+        &__map {
+            height: 250px;
+        }
+        &__copyright {
+            &_middle {
+                display: none;
+            }
+        }
+    }
+}
+@media (max-width: 535px) {
+    .footer {
+        &__info {
+            margin: 0 10px;
+            &-container {
+                display: block;
+            }
+        }
+        &__email {
+            margin-top: 25px;
+        }
+        &__office {
+            margin-top: 25px;
+        }
+        &__manufacture {
+            margin-top: 25px;
+        }
+    }
+}
+@media (max-width: 375px) {
+    .footer {
+        &__contacts-info {
+            width: auto;
+        }
+        &__tel {
+            margin-right: 10px;
         }
     }
 }
