--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -218,7 +218,7 @@
             &::after {
                 content: '';
                 position: absolute;
-                bottom: -100%;
+                bottom: calc(-100% - 2px);
                 left: 0;
                 width: 100%;
                 height: 3px;
@@ -382,7 +382,7 @@
     z-index: 10;
     width: 100%;
     background: #fff;
-    transition: all .5s;
+    transition: all 0.5s;
 
     &__heading {
         padding: 0 11px;
@@ -594,6 +594,7 @@
 }
 @media (max-width: 1024px) {
     .header {
+        height: auto;
         &__top {
             &-container {
                 width: auto;
