--- a/src/sass/block/main/_production.scss
+++ b/src/sass/block/main/_production.scss
@@ -1,5 +1,5 @@
 .production {
-    padding-top: 83px;
+    padding: 83px 0 80px;
 
     &__title {
         font-family: 'Raleway';
@@ -22,5 +22,27 @@
         line-height: 22px;
         text-align: center;
         letter-spacing: 0.01em;
+    }
+
+    &__btn {
+        margin: 0 auto;
+        margin-top: 70px;
+        width: 200px;
+        height: 52px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid #337d5a;
+        font-family: 'Raleway';
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 18px;
+        letter-spacing: 0.02em;
+        color: $first_color;
+        transition: all 0.2s;
+        &:hover {
+            background-color: $first_color;
+            color: $default_color;
+        }
     }
 }
