--- a/src/sass/style.index.scss
+++ b/src/sass/style.index.scss
@@ -5,5 +5,7 @@
 @import 'block/main/promo';
 @import 'block/main/production';
 @import 'base/products';
+@import 'base/about-manufacture';
+@import 'block/main/info';
 
 @import 'base/footer';
