Made section.target

--- a/src/sass/style.index.scss
+++ b/src/sass/style.index.scss
@@ -7,5 +7,6 @@
 @import 'base/products';
 @import 'base/about-manufacture';
 @import 'block/main/info';
+@import 'block/main/target';
 
 @import 'base/footer';
