made section.benefits-products

--- a/src/sass/style.index.scss
+++ b/src/sass/style.index.scss
@@ -8,5 +8,6 @@
 @import 'base/about-manufacture';
 @import 'block/main/info';
 @import 'block/main/target';
+@import 'block/main/benefits-products';
 
 @import 'base/footer';
