--- a/src/sass/style.index.scss
+++ b/src/sass/style.index.scss
@@ -9,5 +9,6 @@
 @import 'block/main/info';
 @import 'block/main/target';
 @import 'block/main/benefits-products';
+@import 'base/eco';
 
 @import 'base/footer';
