--- a/src/sass/style.index.scss
+++ b/src/sass/style.index.scss
@@ -10,5 +10,6 @@
 @import 'block/main/target';
 @import 'block/main/benefits-products';
 @import 'base/eco';
+@import 'base/mini-news';
 
 @import 'base/footer';
