--- a/src/sass/style.index.scss
+++ b/src/sass/style.index.scss
@@ -6,7 +6,7 @@
 @import 'block/main/production';
 @import 'base/products';
 @import 'base/about-manufacture';
-@import 'block/main/info';
+@import 'base/info';
 @import 'block/main/target';
 @import 'block/main/benefits-products';
 @import 'base/eco';
