--- a/src/sass/style.about-company.scss
+++ b/src/sass/style.about-company.scss
@@ -4,5 +4,7 @@
 @import 'block/about-company/promo';
 @import 'base/about-manufacture';
 @import 'block/about-company/founder';
+@import 'base/info';
+@import 'base/gallery';
 
 @import 'base/footer';
