--- a/src/sass/style.about-company.scss
+++ b/src/sass/style.about-company.scss
@@ -6,5 +6,7 @@
 @import 'block/about-company/founder';
 @import 'base/info';
 @import 'base/gallery';
+@import 'base/eco';
+@import 'base/mini-news';
 
 @import 'base/footer';
