--- a/src/sass/style.for-clients.scss
+++ b/src/sass/style.for-clients.scss
@@ -3,6 +3,7 @@
 @import 'base/_header';
 @import 'block/for-clients/promo';
 @import 'block/for-clients/info-for-clients';
+@import 'block/for-clients/catalog';
 @import 'base/info';
 @import 'base/eco';
 @import 'base/footer';
