--- a/src/sass/block/for-clients/_catalog.scss
+++ b/src/sass/block/for-clients/_catalog.scss
@@ -151,35 +151,53 @@
 
 @media (max-width: 1355px) {
     .catalog {
-        margin: 0 25px;
-        display: flex;
-        justify-content: space-between;
         &__group {
-            width: auto;
-            margin-right: 25px;
-        }
-        &__list {
-            height: 100%;
-            flex-direction: column;
-        }
-        &__divider {
-            display: none;
+            width: 1100px;
         }
         &__tabs {
-            width: auto;
+             width: 1000px;
         }
         &__tab {
-            margin-top: 0;
-            width: 1070px;
-            &-wrapper {
+             width: 1000px;
+             &-wrapper {
                 margin-right: 40px;
+             }
+             &-img {
+                img {
+                    object-fit: cover;
+                }
+             }
+        }
+    }
+}
+@media (max-width: 1125px) {
+    .catalog {
+        &__group {
+            width: 95%;
+            overflow: scroll;
+            &::-webkit-scrollbar {
+                display: none;
             }
-            &-descr {
-                width: 400px;
+        }
+        &__list {
+            width: 1100px;
+        }
+    }
+}
+@media (max-width: 1024px) {
+    .catalog {
+        &__tabs {
+            width: 95%;
+            height: auto;
+            &-wrapper {
+                display: block;
             }
+        }
+        &__tab {
+            flex-direction: column-reverse;
             &-img {
                 width: 100%;
-                height: 100%;
+                object-fit: cover;
             }
         }
     }
