--- a/src/sass/block/for-clients/_catalog.scss
+++ b/src/sass/block/for-clients/_catalog.scss
@@ -103,8 +103,11 @@
     &__tab {
         margin-top: 37px;
         width: 1290px;
-        display: flex;
+        display: none;
         justify-content: space-between;
+        &_active {
+            display: flex;
+        }
     }
 
     &__tab-wrapper {
@@ -152,7 +155,7 @@
 @media (max-width: 1355px) {
     .catalog {
         &__group {
-            width: 1100px;
+            width: 1000px;
         }
         &__tabs {
              width: 1000px;
@@ -170,7 +173,7 @@
         }
     }
 }
-@media (max-width: 1125px) {
+@media (max-width: 1024px) {
     .catalog {
         &__group {
             width: 95%;
@@ -180,25 +183,44 @@
             }
         }
         &__list {
-            width: 1100px;
+            width: 1000px;
         }
-    }
-}
-@media (max-width: 1024px) {
-    .catalog {
         &__tabs {
             width: 95%;
             height: auto;
-            &-wrapper {
-                display: block;
-            }
         }
         &__tab {
+            width: 100%;
             flex-direction: column-reverse;
+            &-wrapper {
+                margin-right: 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+            }
             &-img {
                 width: 100%;
+                height: 350px;
                 object-fit: cover;
             }
+        }
+    }
+}
+@media (max-width: 535px) {
+    .catalog {
+        &__tab {
+            &-wrapper {
+                width: auto;
+            }
+        }
+    }
+}
+@media (max-width: 460px) {
+    .catalog {
+        &__tab-descr {
+            margin-left: 10px;
+            margin-right: 10px;
+            width: auto;
         }
     }
 }
