Changed the structure of the page

--- a/src/sass/base/_mini-news.scss
+++ b/src/sass/base/_mini-news.scss
@@ -153,6 +153,9 @@
             color: $default_color;
         }
     }
+    &_white {
+        background-color: $default_color;
+    }
 }
 
 @media (max-width: 1355px) {
