--- a/src/sass/block/news/_news.scss
+++ b/src/sass/block/news/_news.scss
@@ -249,3 +249,82 @@
     }
     
 }
+@media (max-width: 890px) {
+    .news {
+        &__items {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+        &__item{
+            &-img {
+                width: 100%;
+            }
+        }
+    }
+    .main-news {
+        width: 420px;
+        flex-direction: column;
+        &__img {
+            width: 100%;
+        }
+        &__article {
+            margin-top: 0;
+        }
+    }
+}
+@media (max-width: 768px) {
+    .news {
+        
+        &__item {
+            &-subtitle {
+
+            }
+            &-img {
+                height: 400px;
+            }
+        }
+    }
+}
+@media (max-width: 583px) {
+    .news {
+        &__items {
+            &-wrapper {
+                width: 100%;
+            }
+        }
+        &__item {
+            &-subtitle {
+                margin-left: 10px;
+                margin-right: 10px;
+                width: auto;
+            }
+        }
+    }
+}
+@media (max-width: 425px) {
+    .news {
+        &__items {
+            width: 100%;
+        }
+        &__item {
+            &-img {
+                margin-left: 10px;
+                margin-right: 10px;
+                width: auto;
+            }
+        }
+    }
+    .main-news {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: auto;
+        &__article {
+            width: auto;
+        }
+    }
+    .mini-news {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: auto;
+    }
+}
