--- a/src/sass/block/one-news/_news.scss
+++ b/src/sass/block/one-news/_news.scss
@@ -33,8 +33,11 @@
 
     &__img {
         margin-top: 35px;
-        width: 990px;
+        width: 100%;
         height: 595px;
+        img {
+            object-fit: cover;
+        }
     }
 
     &__text {
@@ -88,6 +91,7 @@
     }
 }
 .aside {
+    margin-top: 145px;
     width: 260px;
     &__news {
         padding: 27px 20px 35px;
@@ -162,6 +166,7 @@
     }
 
     &__ad {
+        margin-top: 26px;
         padding: 43px 20px 29px;
         background-color: $first_color;
     }
@@ -205,5 +210,50 @@
             width: 16px;
             height: 16px;
         }
+    }
+}
+
+@media (max-width: 1355px) {
+    .news {
+        margin-left: 25px;
+        margin-right: 25px;
+        width: auto;
+        &__main {
+            width: 800px;
+        }
+    }
+}
+@media (max-width: 1125px) {
+    .news {
+        gap: 25px;
+        &__main {
+            width: auto;
+        }
+    }
+}
+@media (max-width: 768px) {
+    .news {
+        padding-bottom: 0;
+        flex-direction: column;
+        align-items: center;
+    }
+    .aside {
+        margin-top: 0;
+    }
+}
+@media (max-width: 535px) {
+    .news {
+        &__title {
+            width: auto;
+        }
+        &__subtitle {
+            width: auto;
+        }
+    }
+}
+@media (max-width: 425px) {
+    .news {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
