--- a/src/sass/block/one-news/_promo.scss
+++ b/src/sass/block/one-news/_promo.scss
@@ -3,7 +3,7 @@
 
     &__path {
         margin: 0 auto;
-        width: 1290px;
+        width: 100%;
         font-family: 'Raleway';
         font-weight: 600;
         font-size: 14px;
@@ -26,5 +26,12 @@
         line-height: 16px;
         letter-spacing: 0.02em;
         color: $fourth_color;
+    }
+}
+@media (max-width: 1355px) {
+    .promo {
+        margin-left: 25px;
+        margin-right: 25px;
+        width: auto;
     }
 }
