--- a/src/sass/block/one-news/_promo.scss
+++ b/src/sass/block/one-news/_promo.scss
@@ -3,7 +3,7 @@
 
     &__path {
         margin: 0 auto;
-        width: 100%;
+        width: 1290px;
         font-family: 'Raleway';
         font-weight: 600;
         font-size: 14px;
@@ -33,5 +33,8 @@
         margin-left: 25px;
         margin-right: 25px;
         width: auto;
+        &__path {
+            width: 100%;
+        }
     }
 }
