--- a/src/sass/style.product-catalog.scss
+++ b/src/sass/style.product-catalog.scss
@@ -2,5 +2,7 @@
 
 @import 'base/header';
 @import 'block/product-catalog/promo';
+@import 'block/product-catalog/catalog';
+@import 'block/product-catalog/about-nuts';
 @import 'base/products';
 @import 'base/footer';
